--- a/styles.css
+++ b/styles.css
@@ -42,3 +42,19 @@ html, body {
     margin: 0.3em;
     align-self: center;
 }
+.signup-form {
+    display: flex;
+    flex-direction: column;
+}
+.signup-email {
+    margin: 0.3em;
+}
+.signup-password {
+    margin: 0.3em;
+}
+.signup-submit-button {
+    background-color: white;
+    width: 10em;
+    margin: 0.3em;
+    align-self: center;
+}
