--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,9 @@ html, body {
     margin: 0.3em;
     align-self: center;
 }
+.signup-anchor {
+    cursor: pointer;
+}
 .signup-form {
     display: flex;
     flex-direction: column;
