--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,12 @@
+* {
+    box-sizing: border-box;
+}
+
 html, body {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
     background-color: red;
 }
 .login-modal-container {
@@ -41,4 +49,16 @@ html, body {
     width: 10em;
     margin: 0.3em;
     align-self: center;
+}
+
+.staples-form {
+    display: flex;
+    align-items: flex-end;
+    align-content: right;
+    justify-content: flex-end;
+    flex-direction: column;
+}
+
+.logo {
+    font-family: 'Exo', sans-serif;
 }
