--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,11 @@ html, body {
 .signup-anchor {
     cursor: pointer;
 }
+.signup-form-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .signup-form {
     display: flex;
     flex-direction: column;
@@ -60,4 +65,14 @@ html, body {
     width: 10em;
     margin: 0.3em;
     align-self: center;
+}
+.back-to-login-window-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.back-to-login-button {
+    width: 10em;
+    margin: 0.3em;
+    margin-bottom: 1em;
 }
