--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,6 @@ html, body {
     margin: 0;
     background-color: rgb(132, 129, 192);
     font-family: 'Exo', sans-serif;
-    /* font-family: Roboto, sans-serif; */
 }
 .login-modal-container {
     display: flex;
@@ -35,6 +34,7 @@ html, body {
     margin: 0 15%;
     box-shadow: 10px 10px 5px grey;
     border-radius: 8px;
+
 }
 .close-login-modal-button {
     align-self: flex-end;
@@ -73,6 +73,9 @@ html, body {
 
 .logo {
     font-family: 'Exo', sans-serif;
+    font-size: 60px;
+    margin: 0;
+    color: #444444;
 }
 
 .signup-anchor {
@@ -122,6 +125,34 @@ html, body {
     padding: 0 19%;
 }
 
+.staples-container {
+    margin-top: -90px;
+    padding-top: 0;
+    width: 100%;
+    height: 440px;
+    background-image: url(./fridge-open.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain
+}
+.all-ingredients-container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    padding: 0 10%;
+}
+
+
+.extras-submit, .staples-submit {
+    border: 1px;
+}
+
+.input-labels {
+    padding-bottom: 10px;
+    font-size: 0.9rem;
+}
 /* styling for tablets */
 @media only screen and (min-width: 768px) {
     .login-email {
