Added in hidden paragraphs that will display if someone enters the wrong username or password. Additional styling will be required

--- a/public/styles.css
+++ b/public/styles.css
@@ -52,6 +52,19 @@ html, body {
     margin: 0.4em;
     margin-bottom: 0;
 }
+
+.wrong-password {
+    border: 1px solid red;
+    color: red;
+    padding: 4px;
+}
+
+.wrong-login-info {
+    border: 1px solid red;
+    color: red;
+    padding: 4px;
+}
+
 .login-form {
     display: flex;
     flex-direction: column;
