--- a/public/styles.css
+++ b/public/styles.css
@@ -60,6 +60,10 @@ html, body {
     margin-bottom: 0;
 }
 
+.modal-body {
+    display: flex;
+    flex-direction: column;
+}
 .wrong-password {
     border: 1px solid red;
     color: red;
