--- a/public/styles.css
+++ b/public/styles.css
@@ -9,7 +9,7 @@ html, body {
     height: 100%;
     padding: 0;
     margin: 0;
-    background-color: rgb(132, 129, 192);
+    background-color: rgb(131, 134, 187);
     font-family: 'Exo', sans-serif;
 }
 
@@ -248,12 +248,16 @@ html, body {
     margin-bottom: 17px;
 }
 
-
+.main {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
 
 .open-fridge {
     height: 460px;
     width: auto;
-    display: none;
+    /* display: none; */
 }
 
 .staples-output {
