--- a/public/styles.css
+++ b/public/styles.css
@@ -208,8 +208,8 @@ html, body {
     flex-direction: column;
     flex-wrap: nowrap;
     justify-content: center;
-    /* align-items: center;
-    padding: 0 10%; */
+    /* align-items: center; */
+    padding: 0 5%;
 }
 
 .staples-output, .extras-output {
